fix: table content too long

--- a/src/global.less
+++ b/src/global.less
@@ -2557,7 +2557,6 @@ a {
               display: flex;
               justify-content: flex-start;
               align-items: center;
-              padding: 0 30px;
               gap: 10px;
               width: 100%;
               height: 39px;
